syntax = "proto3";

package sourcetool.websocket.v1;

import "exception/v1/exception.proto";
import "page/v1/page.proto";
import "widget/v1/widget.proto";

option go_package = "github.com/trysourcetool/sourcetool/proto/go/websocket/v1;websocketv1";

message Message {
  string id = 1;
  oneof type {
    exception.v1.Exception exception = 2;
    InitializeHost initialize_host = 3;
    InitializeHostCompleted initialize_host_completed = 4;
    InitializeClient initialize_client = 5;
    InitializeClientCompleted initialize_client_completed = 6;
    RenderWidget render_widget = 7;
    RerunPage rerun_page = 8;
    CloseSession close_session = 9;
    ScriptFinished script_finished = 10;
  }
}

message InitializeHost {
  string api_key = 1;
  string sdk_name = 2;
  string sdk_version = 3;
  repeated page.v1.Page pages = 4;
}

message InitializeHostCompleted {
  string host_instance_id = 1;
}

message InitializeClient {
  optional string session_id = 1;
  string page_id = 2;
}

message InitializeClientCompleted {
  string session_id = 1;
}

message RenderWidget {
  string session_id = 1;
  string page_id = 2;
  repeated int32 path = 3;
  widget.v1.Widget widget = 4;
}

message RerunPage {
  string session_id = 1;
  string page_id = 2;
  repeated widget.v1.Widget states = 3;
}

message CloseSession {
  string session_id = 1;
}

message ScriptFinished {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_FAILURE = 2;
  }

  string session_id = 1;
  Status status = 2;
}
